--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -1,6 +1,10 @@
+html,
+body {
+  height: 100%;
+}
+
 html {
   font-size: 16px;
-  height: 100%;
   box-sizing: border-box;
   @include tablets {
     font-size: 14px;
@@ -11,22 +15,25 @@ html {
   }
 }
 
-
 body {
-  position: relative;
   margin: 0;
-  padding-bottom: 50px;
-  min-height: 100%;
   font-family:  Arial, Helvetica, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
+  display: flex;
+  flex-direction: column;
 }
 
 .layout {
   background: #fff;
+  width: 100%;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
 }
+
 // tag styles reset
 a {
   color: inherit;
@@ -46,10 +53,6 @@ p {
   margin: 0;
 }
 
-footer {
-  position: relative;
-  width: 100%;
-}
 
 *,
 *:before,
