--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,8 +1,5 @@
 .footer {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    flex: 0 0 auto;
     height: 50px;
     display: flex;
     align-items: center;
