--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -32,6 +32,8 @@ body {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
+  letter-spacing: 0;
+  text-align: left;
 }
 
 // tag styles reset
