--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -1,9 +1,20 @@
-.device {
+.actions {
+    display: flex;
+    flex-wrap: wrap;
+    height: 350px;
+    overflow: hidden;
+    padding: 10px 20px;    
+}
+
+
+.action {
     background-color: #F7F7F7;
     border-radius: 20px;
     width: 200px;
-    height: 120px;
+    height: 100px;
     padding: 10px 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,14 +28,14 @@
     }
 }
 
-.device__text {
+.action__text {
     font-size: 14px;
     color: #333333;
     font-weight: 700;
     margin-bottom: 5px;
 }
 
-.device__subtext {
+.action__subtext {
     font-size: 12px;
     color: #858585;
 }
