--- a/src/styles/blocks/common/icons.scss
+++ b/src/styles/blocks/common/icons.scss
@@ -1,7 +1,3 @@
-.icon {
-  background-size: 24px 24px;
-}
-
 .icon-sun-max,
 .icon-sun-min,
 .cloud-drizzle,
@@ -11,10 +7,12 @@
 .icon-temperature,
 .icon-temperature-2 {
   display: inline-block;
-  background: url('../img/icons/icon_spite.png') no-repeat;
+  background-image: url('../img/icons/icon_spite.png');
+  background-repeat: no-repeat;
   overflow: hidden;
   text-indent: -9999px;
   text-align: left;
+  background-size: 36px 218px;
 }
 
 .icon-sun-max {
@@ -73,4 +71,21 @@
 
 .icon-arrow_left {
   transform: rotate(-135deg);
+}
+
+.icon-arrow-2 {
+	height: 10px; width: 10px;
+	border: 1px solid #333;
+	border-width: 2px 2px 0 0;
+	transform: rotate(-45deg);
+}
+
+.icon-arrow-2:after {
+	content: '';
+	display: block;
+	height: 10px; width: 10px;
+	border: 1px solid #333;
+	border-width: 2px 2px 0 0;
+	transform: translate(5px, -7px);
+
 }
