--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -10,15 +10,14 @@
     margin-top: 10px;
     justify-content: space-between;
     height: 100%;
-    flex: 1;    
-    padding-left: 20px; 
+    // flex: 1;
 }
 
 .main__content {
     width: 50%;
     display: flex;
-    flex-direction: column;
-    padding-right: 20px;
+    flex-direction: column;   
+    min-width: 470px;
 }
 
 .main__block {
