--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -20,10 +20,11 @@ body {
   font-family:  Arial, Helvetica, sans-serif;
   font-size: 13px;
   font-weight: 400;
-  line-height: 1.42;
+  line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   display: flex;
   flex-direction: column;
+  min-width: 992px;
 }
 
 .layout {
@@ -34,6 +35,7 @@ body {
   flex-direction: column;
   letter-spacing: 0;
   text-align: left;
+  color: #333;
 }
 
 // tag styles reset
