--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -1,11 +1,24 @@
-.actions {
+.actions-container {
     display: flex;
-    flex-wrap: wrap;
-    height: 350px;
+    flex-direction: row;
     overflow: hidden;
-    padding: 10px 20px;    
+    overflow-x: scroll;
+    padding-left: 5px;
+    margin-left: 15px;
+    padding-top: 10px;
+    width: 650px;
 }
 
+.actions {
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    height: 340px;
+    width: 645px;
+    //padding: 10px 5px 10px 10px;
+
+}
 
 .action {
     background-color: #F7F7F7;
@@ -22,9 +35,13 @@
     transition: box-shadow 0.15s cubic-bezier(.25,.1,.25,1), background-color 0.15s cubic-bezier(.25,.1,.25,1);
     cursor: pointer;
 
-    &:hover {
+    &:active {
         box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), 0 0 1px 0px rgba(0,0,0,.12);
         background-color: #FFFFFF;
+    }
+
+    &:nth-child(3n+3) {
+        margin-right: 10px;
     }
 }
 
