--- a/src/styles/blocks/common/device.scss
+++ b/src/styles/blocks/common/device.scss
@@ -11,7 +11,7 @@
     transition: box-shadow 0.15s cubic-bezier(.25,.1,.25,1), background-color 0.15s cubic-bezier(.25,.1,.25,1);
     cursor: pointer;
 
-    &:hover {
+    &:active {
         box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), 0 0 1px 0px rgba(0,0,0,.12);
         background-color: #FFFFFF;
     }
