--- a/src/styles/blocks/common/icons.scss
+++ b/src/styles/blocks/common/icons.scss
@@ -69,7 +69,7 @@
   height: 10px;
   border-top: 2px solid;
   border-right: 2px solid;
-  border-color: #000;
+  border-color: $main;
 }
 
 .icon-arrow_right {
