--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding-left: 5px;
     margin-left: 15px;
     padding-top: 10px;
@@ -21,7 +21,7 @@
 }
 
 .action {
-    background-color: #F7F7F7;
+    background-color: $itemColor;
     border-radius: 20px;
     width: 200px;
     height: 100px;
@@ -37,7 +37,7 @@
 
     &:active {
         box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), 0 0 1px 0px rgba(0,0,0,.12);
-        background-color: #FFFFFF;
+        background-color: $itemActiveColor;
     }
 
     &:nth-child(3n+3) {
@@ -47,12 +47,12 @@
 
 .action__text {
     font-size: 14px;
-    color: #333333;
+    color: $main;
     font-weight: 700;
     margin-bottom: 5px;
 }
 
 .action__subtext {
     font-size: 12px;
-    color: #858585;
+    color: $grey;
 }
