--- a/src/styles/blocks/common/device.scss
+++ b/src/styles/blocks/common/device.scss
@@ -1,5 +1,5 @@
 .device {
-    background-color: #F7F7F7;
+    background-color: $itemColor;
     border-radius: 20px;
     width: 200px;
     height: 120px;
@@ -13,18 +13,18 @@
 
     &:active {
         box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), 0 0 1px 0px rgba(0,0,0,.12);
-        background-color: #FFFFFF;
+        background-color: $itemActiveColor;
     }
 }
 
 .device__text {
     font-size: 14px;
-    color: #333333;
+    color: $main;
     font-weight: 700;
     margin-bottom: 5px;
 }
 
 .device__subtext {
     font-size: 12px;
-    color: #858585;
+    color: $grey;
 }
