--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
-    justify-content: space-between;
+    justify-content: flex-start;
     height: 100%;
     // flex: 1;
 }
@@ -18,7 +18,17 @@
     display: flex;
     flex-direction: column;   
     min-width: 470px;
+
+    &_right {
+        width: auto;
+    }
+
+    &_left {
+        max-width: 740px;
+        flex: 1;
+    }
 }
+
 
 .main__block {
     border-radius: 20px;
