--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,22 +5,22 @@
     align-items: center;
     flex-direction: row;
     padding: 0 20px;
-    background-color: #fff;
+    background-color: white;
 }
 
 .footer__link {
     font-size: 12px;    
-    color: #858585;
+    color: $grey;
     transition: color .15s ease-out;
     margin-right: 20px;
     &:hover {
         opacity: 1;
-        color: #c00;
+        color: $red;
     }    
 }
 
 .footer__text {
     font-size: 12px;    
-    color: #858585;
+    color: $grey;
     margin-left: auto;
 }
