--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -6,7 +6,7 @@ body {
 html {
   font-size: 16px;
   box-sizing: border-box;
-  min-width: 1366px;
+  min-width: 1140px;
   @include tablets {
     font-size: 14px;
   }
@@ -36,7 +36,7 @@ body {
   flex-direction: column;
   letter-spacing: 0;
   text-align: left;
-  color: #333;
+  color: $main;
 }
 
 // tag styles reset
