--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,15 @@
 //colors
-$orange: #e45028;
-$yellow: #f9b43b;
-$black: #2f3234;
-$red: #e35028;
-$green: #8ac03e;
+$main: #333333;
+$grey: #858585;
+$white: #ffffff;
+$yellow: #ffd93e;
+$red: #cc0000;
+
+$itemColor: #f7f7f7;
+$itemActiveColor: #ffffff;
 
 //device resolutions
-$laptop: 1100px;
+$laptop: 1140px;
 $tablets: 768px;
 $phones: 480px;
 
