--- a/src/styles/blocks/common/title.scss
+++ b/src/styles/blocks/common/title.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 0 10px 0; 
+    margin: 10px 0 10px 0; 
     padding: 0 20px;
 }
 
@@ -17,6 +17,18 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    
+    @include phones {
+        display: none;
+    }
+}
+
+.title__nav-mob {
+    display: none;
+
+    @include phones {
+        display: block;
+    }
 }
 
 .title__nav-item {
@@ -30,17 +42,30 @@
     transition: background-color .15s ease-out;
     cursor: pointer;
 
-    &:hover {
+    &:active {
         background-color: darken($itemColor, 5%);
     }
     &.active {
-        background-color: $yellow;
+        background-color: $yellow;      
     }
+
+    @include phones {
+        display: flex;
+        align-items: center;
+        p {
+            margin-right: 3px;
+        }
+    }    
 }
+
 
 .title__arrow {
     margin-left: auto;
     display: flex;
+
+    @include phones {
+        display: none;
+    }
 }
 
 .title__arrow-item {
