--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -4,11 +4,27 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    padding: 0 20px;
     background-color: white;
+
+    @include phones {
+        height: auto;
+        flex-direction: column;
+    }
 }
 
 .footer__link {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    padding: 0 20px;
+
+    @include phones {  
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+.footer__link__item {
     font-size: 12px;    
     color: $grey;
     transition: color .15s ease-out;
@@ -17,10 +33,21 @@
         opacity: 1;
         color: $red;
     }    
+
+    @include phones {
+        padding: 0 10px 10px;
+        width: 50%;
+        margin-right: 0px;
+    }
 }
 
 .footer__text {
     font-size: 12px;    
     color: $grey;
-    margin-left: auto;
+    align-self: flex-end;
+
+    @include phones {
+        margin-bottom: 10px;
+        align-self: center;
+    }
 }
