--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -6,7 +6,6 @@ body {
 html {
   font-size: 16px;
   box-sizing: border-box;
-  min-width: 1140px;
   @include tablets {
     font-size: 14px;
   }
@@ -25,7 +24,13 @@ body {
   -webkit-font-smoothing: antialiased;
   display: flex;
   flex-direction: column;
-  
+  min-width: 1140px;
+  -webkit-text-size-adjust: none;  
+
+  @include phones {
+    min-width: auto;
+    width: 100vw;
+  }
 }
 
 .layout {
