--- a/src/styles/blocks/common/icons.scss
+++ b/src/styles/blocks/common/icons.scss
@@ -94,7 +94,6 @@
 	border: 1px solid #333;
 	border-width: 2px 2px 0 0;
 	transform: translate(5px, -7px);
-
 }
 
 .icon-nav {
@@ -105,5 +104,5 @@
   border-right: 2px solid;
   border-color: $main;
   transform: rotate(135deg);
-  margin-left: 3px;
+  margin-bottom: 5px;
 }
