--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,12 +6,13 @@
     padding: 0 20px;
     @include phones {
         justify-content: space-between;
-        margin-bottom: 10px;
+        height: 60px;
+        border-bottom: none;
       }
 }
 
 .logo__img {
-    max-height: 27px;
+    max-height: 35px;
     position: relative;
 }
 
@@ -75,3 +76,89 @@
 		bottom: 0;
 	}
 }
+
+/////
+.close {
+    position: absolute;
+    right: 22px;
+    top: 18px;
+    width: 25px;
+    height: 25px;
+    }
+    
+    .close:before, .close:after {
+    position: absolute;
+    left: 15px;
+    content: '';
+    height: 26px;
+    width: 4px;
+    background-color: #fff;
+    border-radius: 3px;
+    }
+    .close:before {
+    transform: rotate(45deg);
+    }
+    .close:after {
+    transform: rotate(-45deg);
+    }
+    
+    .device-wrap {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .device-menu {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba($main, .99);
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        z-index: 1;
+    }
+    
+    .device-menu__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 60px;
+    
+        @include phones {
+            padding-bottom: 0px;
+            padding-top: 45px;
+        }
+    }
+    
+    .device-menu__item {  	
+    
+      &:last-child {
+        &:after {
+          display: none;
+        }
+      }
+    
+      &:after {
+        content: "";
+        display: block;
+        width: 7px;
+        height: 7px;
+        background: #fff;
+        border-radius: 50%;
+        margin: 20px auto;
+      }
+    }
+    
+    .device-menu__link {
+      color: #fff;
+      font-size: 24px;
+      text-transform: uppercase;
+      text-decoration: none;
+      &:active {
+            text-decoration: underline;
+        }
+    }
