--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -44,10 +44,11 @@
 .footer__text {
     font-size: 12px;    
     color: $grey;
-    align-self: flex-end;
-
+    margin-left: auto;
+    margin-right: 20px;
     @include phones {
         margin-bottom: 10px;
+        margin-right: auto;
         align-self: center;
     }
 }
