--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,12 +2,16 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #F0F0F0;
+    background: $white;
     height: 80px;
     padding: 0 20px;
     @include phones {
         justify-content: space-between;
         height: 60px;
         border-bottom: none;
+        position: sticky;
+        top: 0;
+        z-index: 1;
       }
 }
 
