--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow: auto;
   margin: 0;
   font-family:  Arial, Helvetica, sans-serif;
   font-size: 13px;
@@ -37,7 +37,8 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
+  overflow-y: auto;
   height: 100%;
 }
 
@@ -52,9 +53,6 @@ body {
   color: $main;
 }
 
-.blur {
-  filter: blur(5px);
-}
 
 // tag styles reset
 a {
