--- a/src/styles/blocks/common/modal-container.scss
+++ b/src/styles/blocks/common/modal-container.scss
@@ -1,15 +1,25 @@
 .modal {
-    display: none;
+    visibility: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba($main, .5);
+    background-color: rgba($main, 0);
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
     z-index: 1;
+    
+    &.active {
+        display: block;
+        visibility: visible;
+        background-color: rgba($main, .5);
+    }
+
+    transition: background-color 0.2s ease-in;
 }
+
+
 
 .modal__wrap {
 	height: 100vh;
@@ -22,6 +32,7 @@
 	}
 }
 
+// тут 
 .modal__block {
     margin: 15px;    
     display: flex;
@@ -38,6 +49,8 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    opacity: 0;
+    transition: opacity 0.05s ease-in;
 }
 
 .modal__title {
@@ -70,12 +83,15 @@
 
 .modal__control {
     display: flex;
+    opacity: 0;
     flex-direction: row;
     justify-content: space-between;
 
     @include phones {
 		flex-direction: column;
-	}
+    }
+    
+    transition: opacity 0.05s ease-in;
 }
 
 .modal__button {
@@ -128,21 +144,14 @@
     align-items: center;
 }
 
-.modal__trigger--active {
-    z-index: 10;
-  }
-
 #modal__temp {
-    will-change: transform, opacity;
+    will-change: transform, opacity, width, height, top, left;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #ffebee;
+    border-radius: 20px;    
+    width: 200px;
+    height: 120px;
     transform: none;
-    opacity: 1;
-    transition: opacity 0.1s ease-out, transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+    opacity: 0;
+    transition: opacity 0.05s ease-in, top 0.2s ease-in, left 0.2s ease-in, width 0.2s ease-in, height 0.2s ease-in, background-color 0.2s ease-in;
     background-color: $itemColor;
-    border-radius: 20px;
   }
