--- a/src/styles/blocks/common/modal-container.scss
+++ b/src/styles/blocks/common/modal-container.scss
@@ -9,7 +9,7 @@
     right: 0;
     left: 0;
     z-index: 1;
-    
+    overflow: hidden;
     &.active {
         display: block;
         visibility: visible;
